# substructure

./: Cargo.toml  build.rs  config.toml
examples/chat-ui/: .mise.toml  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
examples/chat-ui/src/: index.css  router.tsx
examples/chat-ui/src/components/: MessageInput.tsx  MessageList.tsx  NewChat.tsx  Sidebar.tsx  ToolCard.tsx
examples/chat-ui/src/lib/: client.ts  event-queue.ts  types.ts  use-chat.ts  use-sessions.ts
examples/chat-ui/src/routes/: Chat.tsx
proto/: a2a.proto
src/: a2a.rs  client.rs  command.rs  event.rs  lib.rs  main.rs  reactor.rs  runtime.rs  session.rs  store.rs
src/ag_ui/: mod.rs  observer.rs  stream.rs  translate.rs  types.rs
src/domain/: agent.rs  aggregate.rs  auth.rs  budget.rs  config.rs  event.rs  mod.rs  openai.rs  secret.rs  span.rs
src/domain/session/: agent_session.rs  agent_state.rs  call_tracker.rs  command.rs  command_handler.rs  effect.rs  event_handler.rs  mod.rs  react.rs  snapshot.rs  state.rs  strategy.rs
src/http/: mod.rs
src/runtime/: aggregate_actor.rs  dispatcher.rs  jsonrpc.rs  mod.rs  otel.rs  session_actor.rs  session_client.rs  strategy.rs  wake_scheduler.rs
src/runtime/budget/: actor.rs  mod.rs
src/runtime/event_store/: in_memory.rs  mod.rs  session_index.rs  sqlite.rs  store.rs
src/runtime/llm/: client.rs  mock.rs  mod.rs  openai.rs  provider.rs
src/runtime/mcp/: actor.rs  client.rs  mod.rs  provider.rs  stdio.rs
