[package]
name = "substructure"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
pbjson = "0.7"
pbjson-types = "0.7"
prost = "0.13"
prost-types = "0.13"
ractor = "0.15"
rand = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["stream", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
ag-ui = []

[build-dependencies]
pbjson-build = "0.7"
prost-build = "0.13"
