[package]
name = "substructure"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"], optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
pbjson = "0.7"
pbjson-types = "0.7"
prost = "0.13"
prost-types = "0.13"
ractor = "0.15"
rand = "0.10.0"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
jsonwebtoken = { version = "9", optional = true }
sha2 = { version = "0.10", optional = true }
serde_json = "1"
toml = "0.8"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["stream", "json"] }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
axum-extra = { version = "0.12", features = ["query"], optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"], optional = true }

[features]
default = ["sqlite"]
ag-ui = []
http = ["ag-ui", "dep:axum", "dep:axum-extra", "dep:tower-http", "dep:jsonwebtoken", "dep:sha2"]
sqlite = ["dep:rusqlite"]
axum-extra = ["dep:axum-extra"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]

[build-dependencies]
pbjson-build = "0.7"
prost-build = "0.13"
